--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
  <header class="header">
   <div class="headline">
 <section id="Sobre mim">
-  <img src="imagem/fotor_2023-4-26_21_12_6.png" alt="danielmendes"> 
+<img src="imagem/fotor_2023-4-26_21_12_6.png" alt="danielmendes"> 
 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam accusamus repellat reprehenderit quasi explicabo sunt repudiandae doloribus expedita ratione officiis, cupiditate omnis voluptatibus impedit saepe velit rem perferendis repellendus et.</p>
   <a class="botao-contato" target="_blank"
    href="https://wa.me/5535997026436?text=Ol%C3%A1%2C+peguei+seu+contato+no+site+e+gostaria+de+saber+mais+sobre+os+servi%C3%A7os.">Contrate agora</a>
@@ -43,18 +43,18 @@
    <div class="card">
     <img src="imagem/programacao.png">
     <h3>Desenvolvimento de sites</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt autem quisquam, ex impedit, tempore veritatis accusantium ipsa nobis, placeat porro consequuntur ad beatae optio omnis velit nesciunt incidunt est soluta. </p>
+    <p>Desenvolvo sites responsivos para você ou sua empresa utilizando HTML5, CSS3 e JavaScript.<br> <br></p>
    </div>
    
    <div class="card">
     <img src="imagem/ilustracao.png">
     <h3>Design para social media</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate enim blanditiis labore ad ipsa animi nam architecto deleniti, impedit officiis vitae magnam, provident nobis est quia quibusdam sequi sunt autem?</p>
+    <p>Criação de logos, cartão de visita e posts para redes sociais. <br> <br></p>
    </div>
    <div class="card">
     <img src="imagem/ads.png">
     <h3>Tráfego pago</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate enim blanditiis labore ad ipsa animi nam architecto deleniti, impedit officiis vitae magnam, provident nobis est quia quibusdam sequi sunt autem?</p>
+    <p>Ajudo empresas a expandir sua presença online, aumentar suas vendas e atingir seus objetivos de marketing digital.</p>
    </div>
   </div>
  </section>
