--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="headline">
 <section id="Sobre mim">
 <img src="imagem/fotor_2023-4-26_21_12_6.png" alt="danielmendes"> 
-<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam accusamus repellat reprehenderit quasi explicabo sunt repudiandae doloribus expedita ratione officiis, cupiditate omnis voluptatibus impedit saepe velit rem perferendis repellendus et.</p>
+<p>Formado em Análise e desenvolvimento de sistemas com foco na área de front-end, utilizando HTML5, CSS3 e JavaScript. Também possuo cursos de designer e tráfego pago.</p>
   <a class="botao-contato" target="_blank"
    href="https://wa.me/5535997026436?text=Ol%C3%A1%2C+peguei+seu+contato+no+site+e+gostaria+de+saber+mais+sobre+os+servi%C3%A7os.">Contrate agora</a>
 </div>  
