--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <img src="imagem/fotor_2023-4-26_21_12_6.png" alt="danielmendes"> 
 <p>Formado em Análise e desenvolvimento de sistemas com foco na área de front-end, utilizando HTML5, CSS3 e JavaScript. Também possuo cursos de designer e tráfego pago.</p>
   <a class="botao-contato" target="_blank"
-   href="https://wa.me/5535997026436?text=Ol%C3%A1%2C+peguei+seu+contato+no+site+e+gostaria+de+saber+mais+sobre+os+servi%C3%A7os.">Contrate agora</a>
+   href="https://wa.me/5535997026436">Contrate agora</a>
 </div>  
   <div class="img-headline">
 <img style="max-width: 90%;"   src="imagem/4136918.jpg" alt="">
@@ -65,6 +65,6 @@
 </div>
  </footer>
  <a class="whats" target="_blank"
-  href="https://wa.me/5535997026436?text=Ol%C3%A1%2C+peguei+seu+contato+no+site+e+gostaria+de+saber+mais+sobre+os+servi%C3%A7os."><img style="width: 80px;" src="imagem/wpp logo.png"></a>
+  href="https://wa.me/5535997026436"><img style="width: 80px;" src="imagem/wpp logo.png"></a>
 </body>
 </html>
