--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
  </nav> 
  <header class="header">
   <div class="headline">
-<section id="Sobre mim">
+<section id="sobremim">
 <p>Formado em Análise e desenvolvimento de sistemas com foco na área de front-end, utilizando HTML5, CSS3 e JavaScript. Também possuo cursos de designer e tráfego pago.</p>
   <a class="botao-contato" target="_blank"
    href="https://wa.me/5535997026436">Contrate agora</a>
