--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
  <nav class="navbar">
 <div class="logo">
- <img src="imagem/logo psd.png" alt="">  
+ <h1>Daniel Mendes</h1>
 </div>
 <div class="menu">
     <a href="#">Home</a>
